src/app.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
	font-family: monospace;
	@apply text-foreground-secondary bg-background text-sm;
	color-scheme: dark;
}

[type='checkbox']:checked {
	background-image: url("data:image/svg+xml,%3csvg viewBox='0 0 16 16' fill='black' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M12.207 4.793a1 1 0 010 1.414l-5 5a1 1 0 01-1.414 0l-2-2a1 1 0 011.414-1.414L6.5 9.086l4.293-4.293a1 1 0 011.414 0z'/%3e%3c/svg%3e");
}

::-webkit-scrollbar {
	width: 4px !important;
	height: 4px !important;
}

::-webkit-scrollbar-track {
	background-color: transparent !important;
}

::-webkit-scrollbar-thumb {
	@apply !bg-foreground-secondary !rounded-lg;
}


.drawer {
        @apply max-w-[100vw] flex flex-col gap-2 !transition-none !animate-none overflow-y-auto z-50 p-4 bg-background fixed top-[14.25rem] inset-y-0 right-8 rounded-lg border border-foreground h-[500px] w-[500px];
}
.chart-container.chart-donut div:not(.apexcharts-legend-series,.apexcharts-tooltip),.apexcharts-svg {
    min-height: 0 !important;
    height: 100% !important;
}
.chart-donut .apexcharts-legend{
    top: 0 !important;
}

